# UniSemester2

./: CMakeLists.txt  Makefile  run.exe.stackdump
Aufgabe 1/Debug/: Aufgabe 1  main.d  ooptool.d
Aufgabe 2/: out.pgm
Aufgabe 2/Debug/: makefile  subdir.mk
Aufgabe2/: main.cpp  ooptool.cpp
Aufgabe2/Debug/: Aufgabe 2
Aufgabe2_3/: IntVector.cpp  IntVector.h  intvector_main.cpp  test_intvector1.cpp
Aufgabe3/: test_tausche.cpp
Aufgabe3/Debug/: main.d  makefile  test_tausche.d
Aufgabe4/: at.h  main.cpp
Aufgabe4/Debug/: Aufgabe4  gtest_main.d  makefile  test_at.d
Aufgabe4_5_2/: IntVector.h
Aufgabe5/: main.cpp
Aufgabe5/Debug/: subdir.mk
Aufgaben/Aufgabe 1/: main.cpp  ooptool.cpp
Aufgaben/Aufgabe2_3/: IntVector.cpp  IntVector.h  (+3 more)
Baum/: main.cpp
Blatt2_Aufgabe1/: main.cpp  participant.cpp  time.cpp  time.h
Date/: date.cpp  date.h  main.cpp  noisy.cpp
Integer/: Integer.cpp  Integer.h  main.cpp
Liste/: Listchen.cpp
Pointer/: main.cpp  noisy.cpp  noisy.h
Projekt/: common.cpp  common.h  crypto.cpp  encrypt.txt
Sequence/: main.cpp
Sortierverfahren/: sortieren.cpp
String/: String.h  main.cpp
Templates/: main.cpp  templates.h
Test1/: main.cpp
Test2/: Uni.cpp  Uni.h  main.cpp
Test3/: main.cpp
Test4/: Test4.cpp
Testat/: alltest.h  gtest_main.cpp  simplemath.cpp  test_studi.cpp
Vererbung/: main.cpp
complex/: complex.h  main.cpp
const_ref/: main.cpp
extra/: Board.cpp  Board.h  atwi80d.txt  ooptoolg.cpp  ooptoolg.h  paint.cpp  studis.txt  test_intvector1.cpp
fehler/: func.h  main.cpp
verketteListe/: linked_list.h  main.cpp
(+78 files in other folders)
